--- a/src/app/js/directives/person-form.html
+++ b/src/app/js/directives/person-form.html
@@ -2,7 +2,7 @@
     <div class="row form-group" id="firstnameGroup">
         <div class="col-xs-12 ">
             <label for="fname" class="control-label"
-                   data-ng-bind="i18n.admin.content.form.etunimi[lang]"></label>
+                   data-ng-bind="i18n.admin.content.form.firstname[lang]"></label>
             <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
             <input id="fname"
                    type="text"
@@ -16,7 +16,7 @@
     <div class="row form-group" id="lastnameGroup">
         <div class="col-xs-12">
             <label for="lname" class="control-label"
-                   data-ng-bind="i18n.admin.content.form.sukunimi[lang]"></label>
+                   data-ng-bind="i18n.admin.content.form.lastname[lang]"></label>
             <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
             <input id="lname"
                    type="text"
@@ -30,7 +30,7 @@
     <div class="row form-group" id="hrnumberGroup">
         <div class="col-xs-12">
             <label for="identifier" class="control-label"
-                   data-ng-bind="i18n.admin.content.form.tunniste[lang]"></label>
+                   data-ng-bind="i18n.admin.content.form.hrnumber[lang]"></label>
             <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
             <input id="identifier"
                    type="text" class="form-control" name="hrnumber"
