Show list of invalid fields on ui when editing person.

--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -1,4 +1,15 @@
 <div data-ng-if="hakuState">
+
+
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="breadcrumb">
+                <h1 data-ng-bind="i18n.header.navigation.admin[lang]"></h1> <span><i class="fa fa-chevron-right"></i></span>
+                <h2>Haku henkilöistä</h2>
+            </div>
+        </div>
+    </div>
+
     <div>
         <div data-ng-if="showList" style="margin: 30px 15px;">
             <button type="button"
