--- a/src/app/js/shared/person-edit-modal.html
+++ b/src/app/js/shared/person-edit-modal.html
@@ -13,8 +13,37 @@
 </div>
 <div class="modal-body" id="modal-body">
     <person-form-directive data-ng-form="editPersonForm" selected-person="selectedPerson" lang="lang"></person-form-directive>
+
+    <div class="row"
+         data-ng-if="invalidFields.missingValue.length > 0 || invalidFields.invalidValue.length > 0">
+        <div class="col-xs-12">
+            <div role="alert" class="alert alert-danger mb-0">
+                <h3 class="text-secondary mt-0">
+                    Tarkasta seuraavat kentät:
+                </h3>
+                <div>
+                  <span class="pxs" data-ng-repeat="o in invalidFields.missingValue">
+                        <i class="text-xl" data-ng-bind="i18n.admin.content.form[o][lang]?i18n.admin.content.form[o][lang]:o"></i>
+                    <br>
+                  </span>
+                  <span class="pxs" data-ng-repeat="i in invalidFields.invalidValue">
+                        <i class="text-xl" data-ng-bind="i18n.admin.content.form[i][lang]?i18n.admin.content.form[i][lang]:i"></i>
+                    <br>
+                  </span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-primary btn-lg pull-left" data-ng-click="editPerson(editPersonForm)">Tallenna tiedot</button>
-    <button type="button" class="btn btn-danger btn-lg pull-right" data-ng-click="removePerson(selectedPerson.id)">Poista henkilö</button>
+    <div class="row">
+        <div class="col-xs-8">
+            <button type="button" class="btn btn-primary btn-lg btn-block" data-ng-click="editPerson(editPersonForm)">Tallenna tiedot</button>
+        </div>
+        <div class="col-xs-4">
+            <button type="button" class="btn btn-danger btn-lg btn-block" data-ng-click="removePerson(selectedPerson.id)">Poista henkilö</button>
+        </div>
+    </div>
 </div>
