Rename all hrnumber fields.

--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -60,7 +60,7 @@
                         <tbody>
                         <tr data-ng-repeat="person in persons | filter: search | limitTo: 20"
                             class="hover-table-green">
-                            <td data-ng-click="editPerson(person, 'lg')">{{person.hrnumero}}</td>
+                            <td data-ng-click="editPerson(person, 'lg')">{{person.tunniste}}</td>
                             <td data-ng-click="editPerson(person, 'lg')">{{person.etunimi}}</td>
                             <td data-ng-click="editPerson(person, 'lg')">{{person.sukunimi}}</td>
                             <td data-ng-click="editPerson(person, 'lg')">{{person.orcid}}</td>
