--- a/src/app/js/directives/person-form.html
+++ b/src/app/js/directives/person-form.html
@@ -27,16 +27,16 @@
                    required>
         </div>
     </div>
-    <div class="row form-group" id="hrnumberGroup">
+    <div class="row form-group" id="tunnisteGroup">
         <div class="col-xs-12">
             <label for="identifier" class="control-label"
-                   data-ng-bind="i18n.admin.content.form.hrnumber[lang]"></label>
+                   data-ng-bind="i18n.admin.content.form.tunniste[lang]"></label>
             <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
             <input id="identifier"
-                   type="text" class="form-control" name="hrnumber"
-                   data-ng-model="selectedPerson.hrnumero"
+                   type="text" class="form-control" name="tunniste"
+                   data-ng-model="selectedPerson.tunniste"
                    data-ng-disabled="selectedPerson.id"
-                   data-ng-keydown="resetValidationError('hrnumber')"
+                   data-ng-keydown="resetValidationError('tunniste')"
                    required>
         </div>
     </div>
