--- a/src/app/html/admin/vie.html
+++ b/src/app/html/admin/vie.html
@@ -227,6 +227,15 @@
         </div>
     </uib-accordion>
 
+    <div data-ng-if="savePersonSuccess || savePersonError">
+        <div class="alert alert-success alert-dismissible" data-ng-class="{'alert-danger': savePersonError}" role="alert">
+            <span class="text-xl text-secondary">{{savePersonResponseText}}</span>
+            <button type="button" data-ng-click="resetDialog()" class="btn close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    </div>
+
 </div>
 
 
