--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12">
             <div class="breadcrumb">
                 <h1 data-ng-bind="i18n.header.navigation.admin[lang]"></h1> <span><i class="fa fa-chevron-right"></i></span>
-                <h2>Haku henkilöistä</h2>
+                <h2>Haku tekijöistä</h2>
             </div>
         </div>
     </div>
