--- a/src/app/html/admin/vie.html
+++ b/src/app/html/admin/vie.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12">
             <div class="breadcrumb">
                 <h1 data-ng-bind="i18n.header.navigation.admin[lang]"></h1> <span><i class="fa fa-chevron-right"></i></span>
-                <h2>Tuo henkilöitä</h2>
+                <h2>Tuo tekijöitä</h2>
             </div>
         </div>
     </div>
