--- a/src/app/js/directives/person-form.html
+++ b/src/app/js/directives/person-form.html
@@ -59,6 +59,7 @@
             <span class="invalid-pattern text-secondary text-danger" aria-hidden="true">Tarkasta ORCID -numeron muoto</span>
         </div>
     </div>
+
     <div class="row form-group"
          data-ng-if="isFieldVisible('alayksikko')">
         <div data-ng-show="selectedPerson.alayksikko[0]" class="col-xs-12">
@@ -67,18 +68,21 @@
                 <div class="col-xs-10">
                     <input disabled
                            id="unit"
-                           type="text" class="form-control"
+                           type="text"
+                           class="input-no-border"
                            data-ng-model="a"
                            name="alayksikko"
+                           data-ng-value="a + ' ' + getAlayksikkoSelite(a)"
                            data-ng-required="isFieldRequired('alayksikko')">
                 </div>
                 <div class="col-xs-2 pl-0">
-                        <span class="btn btn-danger"
+                        <a class="text-danger cursor-pointer text-secondary"
                               data-ng-click="removeAlayksikko($index)"
                               data-ng-hide="selectedPerson.alayksikko.length<2"
-                              title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
-                              data-ng-bind="i18n.content.form.organisaatiotekija.poista.tooltip[lang]">
-                        </span>
+                              title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}">
+                            {{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}
+                            <i class="fa fa-close" aria-hidden="true"></i>
+                        </a>
                 </div>
             </div>
         </div>
@@ -119,7 +123,7 @@
                     {{i18n.admin.content.form.alayksikko.placeholder.lisaa[lang]}}
                 </ui-select-match>
                 <ui-select-choices role="option" repeat="o in getAlayksikkoData(alayksikkovuosi.selected) | filter: $select.search">
-                    {{ o.arvo}} {{o.selite}}
+                     {{o.selite}}
                 </ui-select-choices>
             </ui-select>
         </div>
