--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -188,4 +188,27 @@
   }
 }
 
+.primary-button-a {
+  background: $brand-primary;
+  padding: 4px 12px;
+  color:#fff;
+  letter-spacing: 1.2px;
+  font-size: 13px;
+  &:hover {
+    background: $brand-primary-dark !important;
+  }
+}
+
+.disabled-button-a {
+  letter-spacing: 1.2px;
+  font-size: 13px;
+  background: $brand-primary-light;
+  padding: 4px 12px;
+  color: $brand-white;
+  cursor: not-allowed;
+  &:hover {
+    text-decoration: none !important;
+  }
+}
+
 
